# dot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE.txt  README-new.md  README.md  cliff.toml  dist-workspace.toml  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release-plz.yml  release.yml
src/: cli.rs  commands.rs  config.rs  error.rs  files.rs  handlers.rs  lib.rs  logger.rs  main.rs  manifest.rs  output.rs  path.rs  path_ext.rs  service.rs  symlink.rs
src/commands/: add.rs  add_multiple.rs  init.rs  mod.rs  remove.rs  remove_multiple.rs  sync.rs
src/fs/: mod.rs  operations.rs  symlink.rs
tests/: integration.rs
