[package]
name = "dot_rust"
version = "1.0.2"
edition = "2024"
description = "A simple configuration files (i.e. dotfiles) manager."
categories = ["command-line-utilities"]
homepage = "https://github.com/rvillegasm/dot"
repository = "https://github.com/rvillegasm/dot"
authors = ["Rafael Villegas <rafa.villegas.michel@gmail.com>"]
license = "MIT"

[[bin]]
name = "dot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }

dirs = "6.0.0"
thiserror = "2.0.16"
toml = "0.8.10"
