[package]
name = "dot_rust"
version = "1.1.1"
edition = "2024"
description = "A simple configuration files (i.e. dotfiles) manager."
categories = ["command-line-utilities"]
homepage = "https://github.com/rvillegasm/dot"
repository = "https://github.com/rvillegasm/dot"
authors = ["Rafael Villegas <rafa.villegas.michel@gmail.com>"]
license = "MIT"

[lib]
name = "dot"
path = "src/lib.rs"

[[bin]]
name = "dot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dirs = "6.0.0"
thiserror = "2.0.12"
toml = "1.0.1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
